--- a/style.css
+++ b/style.css
@@ -1,13 +1,27 @@
 body
 {
+   
     font-family: sans-serif;
     margin: 0 50px;
+    
 }
+
+
 
 .container
 {
     display: flex;
     gap: 50px;
+    flex-direction: column;
+    align-items: center;
+    
+
+    
+}
+
+.tela
+{
+
 }
 
 #publicao
