--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 body
 {
-   
+    background: #010221;
     font-family: sans-serif;
     margin: 0 50px;
     
+}
+
+h1
+{
+    color: aqua;
 }
 
 
@@ -14,14 +19,22 @@ body
     gap: 50px;
     flex-direction: column;
     align-items: center;
-    
+    /* ---------------- */
+    margin: 0 auto;
+    padding: 2em;
+    width: 400px;
+    background: #0A7373;
+    border-radius: 10px;
+    position: relative;
+    box-shadow: 0 0 40px black;
 
     
 }
 
 .tela
 {
-
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #publicao
@@ -50,4 +63,11 @@ i
 #conteudo_p
 {
     color: red;
+}
+
+#input
+{
+    background-color: #dddd;
+    padding: 1em;
+    border-radius: 12px;
 }
